# noiz2sa-0.51a-saturn

./: .gitignore  .gitmodules  AGENTS.md  BUILD_GUIDE.md  BUILD_SYSTEM_SUMMARY.md  CD_GENERATION_GUIDE.md  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  HW_DEBUG_GUIDE.md  README  README.md  add_audio_tracks.sh  readme.txt
.github/instructions/: src-cpp.instructions.md
SDL/: .gitignore  CMakeLists.txt  to_implement.txt
SDL/SDL_mixer/: mixer.c  music.c
SDL/include/: SDL_saturn.h
SDL/src/: SDL.c  SDL_getenv.c
SDL/src/audio/: SDL_wave.c
SDL/src/cdrom/saturn/: SDL_syscdrom.c
SDL/src/file/: SDL_rwops.c
SDL/src/joystick/saturn/: SDL_sysjoystick.c
SDL/src/thread/saturn/: SDL_sysmutex.c  SDL_systhread.c
SDL/src/timer/saturn/: SDL_systimer.c
SDL/src/video/: CMakeLists.txt  Makefile.am  SDL_cursor.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c
SDL/src/video/saturn/: SDL_satvideo.c  SDL_satvideo.h
SDL/test/: CMakeLists.txt
SDL/test/helloworld/: CMakeLists.txt  helloworld.c
SDL/test/testtimer/: testtimer.c
SDL/test/testver/: CMakeLists.txt  testver.c
SDL_mixer/: CMakeLists.txt  SDL_mixer.h  mixer.c
Tests/: BULLETML_PARITY_TEST_README.md  run_bulletml_tests.sh  run_factory_tests.sh  run_tests.bat  test_background_campaign.sh  test_bulletml_campaign.sh  test_campaign.sh  test_factory_campaign.sh  test_native_sh2_campaign.sh
Tests/bulletml/: bulletml_latch_recovery_tests.cpp  bulletml_parity_tests.cpp  foecommand_trim_tests.cpp  generate_blb_manifest.py  memory_pressure_tests.cpp  test_all_xml_recursive.py
Tests/cd/data/BOSS/: B000.BLB  B001.BLB  B009.BLB  B015.BLB  B016.BLB  B017.BLB  B019.BLB  B020.BLB  B022.BLB  B026.BLB  B029.BLB  LIST.TXT
Tests/cd/data/MIDDLE/: LIST.TXT  M005.BLB  M013.BLB  M014.BLB  M015.BLB
Tests/cd/data/ZAKO/: LIST.TXT  Z001.BLB  Z005.BLB  Z007.BLB  Z013.BLB  Z015.BLB
Tests/cd_bulletml/data/: BLBEXP.TXT  BULLETML_EXPECTED.TXT
Tests/cd_bulletml/data/BOSS/: DAIHIB2B.BLB  DAIRBS5.BLB  FWD3WAY.BLB  KETR3FS.BLB  PROGR5W.BLB  ROLLBAR.BLB  SIDCRK.BLB
Tests/cd_bulletml/data/MIDDLE/: NWROLL.BLB  SPREABF.BLB  SPREADN.BLB  VRTLAS.BLB  XFIRE.BLB
Tests/cd_bulletml/data/ZAKO/: 248SHOT.BLB  ACCUM.BLB  KETR1BI.BLB  NWAY.BLB
Tests/collision/: collision_unit_tests.cpp
Tests/hiscore/: hiscore_persistence_unit_tests.cpp
Tests/src/: background_main.cxx  bulletml_expected_signatures.hpp  bulletml_main.cxx  factory_headers_compile.cxx  factory_main.cxx  logic_test_compat.h  logic_test_srl_main.cpp  main.cxx  minunit.h  vector_bridge.cxx
Tests/vector/: vector_unit_tests.cpp
cd/data/: BOOTSND.MAP
cd/data/BOSS/: GUWB2CF.BLB  GUWB3F3.BLB  IKADRC2.BLB  KETR5AC.BLB  LIST.TXT  PROGR1G.BLB  PROGR3W.BLB  PROGR5R.BLB  PSYXABO.BLB
cd/data/IMAGES/: SPLASH1.tga  SPLASH2.tga  TITLE2.TGA  TITLEN.TGA  TITLEO.TGA  TITLES.TGA
cd/data/MIDDLE/: 1TONWAY.BLB  23ACCEL.BLB  4WACCEL.BLB  DAIRBS3.BLB  IKAR3MD.BLB  IKARFL.BLB  KETR25W.BLB  LIST.TXT  SHOTGUN.BLB  SPRE2BL.BLB
cd/data/SOUNDS/: BONUS.PCM  BOSDES.PCM  EXTEND.PCM  FOEDES.PCM  HIT.PCM  SHIPDS.PCM  SHOT.PCM
cd/data/ZAKO/: IKAR5VR.BLB  LIST.TXT  RNDWAY.BLB  SLOWDWN.BLB  STAY.BLB
cd/music/: tracklist
cmake/: SRL.cmake  generate_hw_debug_bulletml.cmake
doc/: AGENTS.md  BINARY_FORMAT.md  BINARY_PARSER_README.md  BUILD_GUIDE.md  BUILD_SYSTEM_SUMMARY.md  CD_GENERATION_GUIDE.md  CMAKE_ENHANCEMENTS.md  DRAWING_SYSTEM.md  HW_DEBUG_GUIDE.md  QUICK_START.md  README.md  REAL_HARDWARE_TESTING.md  TOOLS_README.md
noiz2sa_share/boss_blb/: [Guwange]_round_4_boss_eye_ball.blb  [Ikaruga]_r1_mdl.blb  [Progear]_round_2_boss_struggling.blb  [ketsui]_r5_middle_slow_spread.blb  beewinder.blb  double_roll_seeds.blb
noiz2sa_share/images_tga/: title_a.tga  title_i.tga  title_z.tga
noiz2sa_share/middle_blb/: 22way.blb  2round.blb  [daiouzyou]_r1_boss_2.blb  [ketsui]_r4_boss_last_red_aim.blb  accel16way.blb
noiz2sa_share/zako_blb/: 6gt.blb  bee.blb  bit_move.blb  twin.blb  twin_extend.blb
src/: Makefile  allocation_factory.h  attractmanager.cpp  attractmanager.h  background.cpp  background.h  barragemanager.cc  barragemanager.h  bonus.cpp  bonus.h  brgmng_mtd.h  bulletml_factory.h  bulletml_runtime_factory.h  canvas.cpp  canvas.h  canvas_palette.cpp  canvas_palette.h  clrtbl.c  clrtbl.cpp  clrtbl.h  collision_math.hpp  degutil.cpp  degutil.h  foe.cc  foe.h  foe_mtd.h  foecommand.cc  foecommand.h  frag.cpp  frag.h  gamepad.c  gamepad.cpp  gamepad.h  graphics_factory.h  hiscore_persistence.cpp  hiscore_persistence.h  hiscore_persistence_format.cpp  hiscore_persistence_format.h  letterdata.h  letterrender.cpp  (+27 more)
src/SDL/: SDL.c  SDL.cpp  SDL.h  SDL_mixer.h  dirent.h  dirent_wrapper.c  dirent_wrapper.cpp  stdio.h  stdio_wrapper.c  stdio_wrapper.cpp
src/backup/: Readme.md
src/backup/INC/: backup.hpp
src/backup/Samples/Backup Memory/: makefile  run_with_kronos.bat
src/bulletml/: CMakeLists.txt  bulletmlerror.h  bulletmlrunner.h  bulletmlrunnerimpl.cpp  bulletmlrunnerimpl.h  bulletmltree.cpp  bulletmltree.h  calc.cpp  calc.h  calc.hpp  calc.yy
src/bulletml/tinyxml/: tinyxml.h
src/bulletml_binary/: BINARY_FORMAT.md  BINARY_PARSER_README.md  CMakeLists.txt  QUICKSTART.md  README.md  bulletml-converter.cpp  bulletml_alloc_latch.h  bulletml_converter.py  bulletmlparser-bin.cpp  bulletmlparser-bin.h  bulletmlparser_binary.hpp  bulletmlparser_blb.hpp  bulletmlrunner.hpp  bulletmlstate.hpp  cmake_install.cmake  convert_all.sh  integration_example.cpp  test-binary.cpp
src/decompression/INC/: decompression.hpp
src/ponesound/: Readme.md
src/ponesound/INC/: ponesound.hpp
src/smpc/: LICENSE  Readme.md
src/smpc/INC/: smpc.hpp
tools/: BINARY_FORMAT.md  README.md  add_audio_tracks.sh  bulletml_converter.py  check_links.py  create_cue_header.sh  perf_campaign.sh  perf_drop_report.py  run_kronos.sh  run_mednafen.sh  run_on_saturn.bat  test_hardware_full.sh  test_mednafen_hiscore_e2e.sh
unit_tests/collision/: collision_unit_tests.cpp
unit_tests/sh2/: test_campaign.sh
unit_tests/sh2/src/: main.cxx  vector_bridge.cxx
unit_tests/vector/: vector_unit_tests.cpp
(+20 files in other folders)
